fixed spacing issue across devices and orientations for banner section of main pages

--- a/css/banner.css
+++ b/css/banner.css
@@ -50,16 +50,12 @@ h2 {
 
 .c_banner_content {
     position: absolute;
-    top: 40%;
+    top: 35%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 
-.c_banner_content h2 {
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
 
 .c_banner_bg {
     height: 90vh;
@@ -69,11 +65,44 @@ h2 {
 
 
 #banner img {
-    max-width: 100px;
+    max-width: 75px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+@media screen and (orientation: portrait){
+    .c_banner_content h2 {
+        margin-top: 1em;
+        margin-bottom: .5em;
+    }
+    #banner img {
+        max-width: 100px;
+    }
+}
+@media screen and (min-width: 768px) and (orientation: portrait) {
+    .c_banner_content {
+        top: 50%;
+    }
+}
+
+@media screen and (min-width: 1000px) and (orientation: landscape) {
+    .c_banner_content {
+        top: 40%;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+
+    .c_banner_content h2 {
+        margin-top: 1em;
+        margin-bottom: .5em;
+    }
+    #banner img {
+        max-width: 100px;
+    }
+}
+
 
 /*--COLORS---*/
 
